--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
             shrinkResources false
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -77,4 +82,8 @@ dependencies {
     testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.21'
 
     implementation "androidx.preference:preference:1.1.0"
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'androidx.test:rules:1.2.0'
+    testImplementation 'org.mockito:mockito-core:2.24.0'
 }
